# ejapp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  _copy_code.py
backend/: alembic.ini  db.py  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  items.py  schemas.py
backend/ejudge/: __init__.py  client.py  ejudge_doc.json  mocks.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 9e96c431b1e1_initial_schema.py
backend/tests/: conftest.py  test_app.py
backend/tests/ejudge/: test_client.py
frontend/: .prettierrc.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/private/: index.html  main.ts
frontend/src/: main.ts  utils.test.ts
frontend/tests/: e2e.spec.ts  global-setup.mjs  global-teardown.mjs
